--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -26,7 +26,7 @@ const title = article.title;
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>[title]</title>
+        <title>{title}</title>
     </head>
     
     <body>
