A lot of imprevement

--- a/src/components/Menus.astro
+++ b/src/components/Menus.astro
@@ -9,7 +9,7 @@ const currentPath = pathname;
 ---
 
 <!-- loop through menus -->
-<nav class="sticky top-2 self-start">
+<nav class="sticky top-2 self-start font-titillium pt-5 md:w-96">
     <ul class="menu flex flex-col gap-1">
         {
             menus.map((menu) => (
