--- a/src/components/Footnotes.astro
+++ b/src/components/Footnotes.astro
@@ -3,7 +3,7 @@ let {footnotes} = Astro.props;
 ---
 {
     footnotes && (
-        <section class="prose font-serif lg:max-w-none mb-5 mt-4 py-2 border-t-2 border-base-content/50 text-sm">
+        <section class="prose font-serif lg:max-w-none mb-5 mt-4 py-4 border-t-[1px] border-base-content/20 text-sm mx-11">
             <h3 id="footnotes">Catatan Kaki</h3>
             <ol>
                 {footnotes.map((footnote) => (
