--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -3,7 +3,10 @@
 let { article } = Astro.props;
 ---
 
-<ul id="toc" class="menu sticky top-2 self-start pt-5 md:w-96">
+<ul id="toc" class="menu sticky top-16 menu-sm self-start pt-5 md:w-96 flex-col gap-1 font-titillium lg:flex hidden">
+    <li>
+        <h3 class="font-bold text-lg menu-title">Daftar Isi</h3>
+    </li>
     {
         article.toc.map((toc) => (
             <li class="menu-item">
@@ -66,7 +69,7 @@ let { article } = Astro.props;
             observerOptions
         );
         // select all headings to observe
-        const elToObserve = document.querySelectorAll("article :is(h2,h3)");
+        const elToObserve = document.querySelectorAll("#main-content :is(h2,h3)");
         // finally, observe the elements
         elToObserve.forEach((el) => observer.observe(el));
     });
