--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -28,11 +28,13 @@ import "@fontsource/amiri";
 import "@fontsource-variable/lora";
 import "@fontsource-variable/montserrat";
 import "@fontsource/titillium-web";
-import { Image } from "astro:assets";
+import { Img } from "astro-imagetools/components";
+import { Head } from 'astro-capo'
+
 ---
 
 <html lang="id-ID" data-theme="dark">
-    <head>
+    <Head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" href="/favicon/favicon.ico" />
@@ -50,54 +52,61 @@ import { Image } from "astro:assets";
             console.log("Search Results");
             console.log(await search(db, { term: "Ali" }));
         </script>
-    </head>
+    </Head>
 
     <body>
         <ViewTransitions />
-        <header>
-            <div class="">
-                <OramaSearch client:load />
-            </div>
-        </header>
+
         <div class="flex relative h-full">
             <Menus />
-            <main class="px-5 pb-10 grow-0 w-full lg:max-w-[1100px]" transition:animate="fade">
-                <div id="main-content">
-                    <section class="article-header relative">
-                        {
-                            article.featured_image && (
-                                <div class="relative -mb-5 opacity-40">
-                                    <div class="absolute inset-0 bg-gradient-to-t from-base-100 from-5% to-[50%] opacity-100" />
-                                    <Image
-                                        class="w-full h-80 md:h-[480px] object-cover object-center"
-                                        src={article.featured_image.url}
-                                        width={article.featured_image.width}
-                                        height={article.featured_image.height}
-                                        alt={article.title}
-                                    />
+            <div class="w-full">
+                <header class="sticky top-0 z-50">
+                    <div class="">
+                        <OramaSearch client:load />
+                    </div>
+                </header>
+                <div class="flex bg-base-300">
+                    <main
+                        class=" pb-10 grow-0 w-full lg:max-w-[1100px]"
+                        transition:animate="fade"
+                    >
+                        <div id="main-content" class="">
+                            <section class="article-header relative">
+                                {
+                                    article.featured_image && (
+                                        <div class="relative -mb-5 opacity-40">
+                                            <div class="absolute h-full w-full inset-0 bg-gradient-to-t from-base-300 from-10% to-[90%] opacity-100" />
+                                            <Img
+                                                layout="fullWidth"
+                                                src={article.featured_image.url}
+                                                aspect={1.78}
+                                                alt={article.title}
+                                            />
+                                        </div>
+                                    )
+                                }
+                                <h1
+                                    class="text-3xl md:text-[40px] font-bold mb-4 font-montserrat relative z-10 text-base-content px-11 pt-5 leading-tight"
+                                >
+                                    {article.title}
+                                </h1>
+                                <div
+                                    class="mt-3 mb-5 relative z-10 text-base-content px-11 pb-4"
+                                >
+                                    Waktu membaca: {article.reading_time} menit
                                 </div>
-                            )
-                        }
-                        <h1
-                            class="text-3xl md:text-[40px] font-bold mb-4 font-montserrat relative z-10 text-base-content px-4 pt-5"
-                        >
-                            {article.title}
-                        </h1>
-                        <div
-                            class="mt-3 mb-5 relative z-10 text-base-content px-4 pb-4"
-                        >
-                            Waktu membaca: {article.reading_time} menit
-                        </div>
-                    </section>
-                    <article
-                        class="prose font-serif max-w-none px-4"
-                        set:html={JSON.parse(article.content)}
-                    />
+                            </section>
+                            <article
+                                class="prose font-serif max-w-none px-11"
+                                set:html={JSON.parse(article.content)}
+                            />
 
-                    <Footnotes footnotes={article.footnotes} />
+                            <Footnotes footnotes={article.footnotes} />
+                        </div>
+                    </main>
+                    <TOC article={article} />
                 </div>
-            </main>
-            <TOC article={article} />
+            </div>
         </div>
     </body>
 </html>
