--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -21,6 +21,7 @@ const json = await res.json();
 
 const article = json.find((article) => article.slug === slug);
 const title = article.title;
+const description = article.excerpt;
 const ogImg = `https://api.vustadz.com/api/og/title=${encodeURIComponent(title)}/img=${Buffer.from(article.featured_image.url).toString('base64')}/logo=${Buffer.from("https://ucarecdn.com/70c79e80-7979-4da9-9fe6-f0a7f1c08ca3/logoicon.png").toString('base64')}`;
 
 import "../../styles.css";
@@ -43,7 +44,7 @@ import { SEO } from "astro-seo";
         <SEO
             title={title}
             titleTemplate="%s | KenaliSyiah"
-            description={article.excerpt}
+            description={description}
             openGraph={{
                 basic: {
                     title: title,
@@ -59,7 +60,7 @@ import { SEO } from "astro-seo";
                 card: "summary_large_image",
                 site: "@kenalisyiah",
                 creator: "@kenalisyiah",
-                description: article.excerpt,
+                description: description,
                 image: ogImg,
             }}
         />
