--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -54,9 +54,11 @@ import { SEO } from "astro-seo";
                 optional:{
                     locale: "id_ID",
                     siteName: "KenaliSyiah",
+                    description: description,
                 }
             }}
             twitter={{
+                title: title,
                 card: "summary_large_image",
                 site: "@kenalisyiah",
                 creator: "@kenalisyiah",
