--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -78,7 +78,7 @@ import { SEO } from "astro-seo";
 
     <body>
         <ViewTransitions />
-        <Navbar />
+        <Navbar client:load />
         <div class="flex relative h-full">
             <SideMenus />
             <div class="w-full">
