Revert "Update [slug].astro"
This reverts commit 5b31f88bd6522038203d671fc8e60f68ca35904c.

--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -78,7 +78,7 @@ import { SEO } from "astro-seo";
 
     <body>
         <ViewTransitions />
-        <Navbar client:load />
+        <Navbar />
         <div class="flex relative h-full">
             <SideMenus />
             <div class="w-full">
