--- a/src/pages/baca/[slug].astro
+++ b/src/pages/baca/[slug].astro
@@ -92,7 +92,7 @@ import { SEO } from "astro-seo";
                                 {
                                     article.featured_image && (
                                         <div class="relative -mb-5 opacity-40">
-                                            <div class="absolute h-full w-full inset-0 bg-gradient-to-t from-base-300 from-10% to-[90%] opacity-100" />
+                                            <div class="absolute h-full w-full inset-0 bg-gradient-to-t from-base-100 dark:from-base-300 from-10% to-[90%] opacity-100" />
                                             <Image
                                                 class="object-cover w-full h-[400px] md:h-[600px]"
                                                 src={article.featured_image.url}
